--- a/app.json
+++ b/app.json
@@ -1,4 +1,45 @@
 {
   "name": "Lavoro",
-  "displayName": "Lavoro"
+  "displayName": "Lavoro",
+
+
+
+  "expo": {
+    "name": "google-maps-example",
+    "slug": "google-maps-example",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./src/assets/icon.png",
+    "splash": {
+      "image": "./src/assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "config": {
+          "googleMapsApiKey": "AIzaSyBs06EkRd01BNnDFCfZ2BUZOFKgr9x3Fd4"
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyBs06EkRd01BNnDFCfZ2BUZOFKgr9x3Fd4"
+        }
+      }
+    },
+    "web": {
+      "favicon": "./src/assets/favicon.png"
+    }
+  }
 }
