--- a/package.json
+++ b/package.json
@@ -10,23 +10,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@emotion/stylis": "^0.8.5",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^12.0.0",
+    "@react-native-firebase/auth": "^12.0.0",
+    "@react-native-firebase/firestore": "^12.0.0",
+    "@react-native-firebase/storage": "^12.0.0",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "expo": "^41.0.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-places-autocomplete": "^2.2.0",
-    "react-native-maps": "0.28.0",
-    "react-native-pager-view": "^5.1.7",
+    "react-native-image-crop-picker": "^0.36.2",
+    "react-native-maps": "0.27.1",
+    "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.1.1",
+    "react-native-screens": "~3.0.0",
     "react-native-tab-view": "^3.0.1",
     "react-native-vector-icons": "^8.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "styled-components": "^5.3.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
@@ -44,7 +57,7 @@
   },
   "android": {
     "package": "com.Lavoro",
-    "versionCode": 1.0,
+    "versionCode": 1,
     "permissions": [
       "ACCESS_COARSE_LOCATION",
       "CAMERA"
